--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-BrainScat, an interpreter for BrainFuck written in Scala.
+Brainscat, an interpreter for Brainfuck written in Scala.
 
 Because, why not?
