--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Brainscat, an interpreter for Brainfuck written in Scala.
+Brainscat, short for Brain scatter, is an interpreter for Brainfuck written in Scala.
 
 Because, why not?
